--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -28,7 +28,7 @@
 
 <body>
     <div class="container">
-        <%- include('partials/sidebar', { userID: userID }) %>
+        <%- include('partials/sidebar', { userID: userID, selected: "dashboard" }) %>
 
         <div class="content">
             <div class="section">
