--- a/views/subtasks.ejs
+++ b/views/subtasks.ejs
@@ -3,7 +3,7 @@
 <%- include('partials/head', { title: 'Hayabusa Charmer' }) %>
 <body>
 <div class="container">
-    <%- include('partials/sidebar', { userID: userID }) %>
+    <%- include('partials/sidebar', { userID: userID, selected: "subtasks" }) %>
     <div class="content">
         <div class="section">
             <h2 class="subtask-heading">サブタスク一覧</h2>
