--- a/views/create_task.ejs
+++ b/views/create_task.ejs
@@ -3,7 +3,7 @@
 <%- include('partials/head', { title: 'Hayabusa Charmer' }) %>
 <body>
 <div class="container">
-    <%- include('partials/sidebar', { userID: userID }) %>
+    <%- include('partials/sidebar', { userID: userID, selected: "" }) %>
     <div class="content">
         <div class="section">
             <h2 class="task-heading">タスク作成</h2>
