--- a/views/edit_project.ejs
+++ b/views/edit_project.ejs
@@ -3,7 +3,7 @@
 <%- include('partials/head', { title: 'Hayabusa Charmer' }) %>
 <body>
 <div class="container">
-    <%- include('partials/sidebar', { userID: userID }) %>
+    <%- include('partials/sidebar', { userID: userID, selected: "" }) %>
     <div class="content">
         <div class="section">
             <h2 class="project-heading">プロジェクト編集</h2>
