--- a/views/error.ejs
+++ b/views/error.ejs
@@ -3,7 +3,7 @@
 <%- include('partials/head', { title: 'Hayabusa Charmer' }) %>
 <body>
     <div class="container">
-        <%- include('partials/sidebar', { userID: userID }) %>
+        <%- include('partials/sidebar', { userID: userID, selected: "" }) %>
         <div class="content">
             <h1>Error</h1>
             <p><%= message %></p>
