--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -3,7 +3,7 @@
 <%- include('partials/head', { title: 'Hayabusa Charmer' }) %>
 <body>
 <div class="container">
-    <%- include('partials/sidebar', { userID: userID }) %>
+    <%- include('partials/sidebar', { userID: userID } %>
     <div class="content">
         <div class="section">
             <h2>プロフィール</h2>
