--- a/views/project.ejs
+++ b/views/project.ejs
@@ -3,7 +3,7 @@
 <%- include('partials/head', { title: 'Hayabusa Charmer' }) %>
 <body>
     <div class="container">
-        <%- include('partials/sidebar', { userID: userID }) %>
+        <%- include('partials/sidebar', { userID: userID, selected: "" }) %>
         <div class="content">
             <div class="breadcrumb">
                 <a href="/dashboard">ダッシュボード</a>
