--- a/views/subtasks.ejs
+++ b/views/subtasks.ejs
@@ -39,7 +39,7 @@
                     <tbody>
                     <% subtaskData.forEach(row => { %>
                         <tr>
-                            <td><a href="/subtask?tid=<%= row.subtaskID %>"><%= row.name %></a></td>
+                            <td><a href="/subtask?sid=<%= row.subtaskID %>"><%= row.name %></a></td>
                             <td><%= row.description %></td>
                             <td><%= row.due %></td>
                             <td>
